--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <h1><a href="#top">
             <div class="flex">
-                <figure><img src="img/logo_airi.png" width="131" height="136" alt=""/></figure>
+                <figure><img src="img/logo_airi.png" width="131" height="136" alt="logo"/></figure>
                 Airi Yoshida</div>
             </a></h1>
         <div class="nav-button"> <span></span> <span></span> <span></span> </div>
@@ -32,15 +32,17 @@
     <main>
         <section class="sec_profile" id="sec_profile">
             <div class="profile1">
-                <figure class="top_img"><img src="img/top-img.png" alt="ME"/></figure>
-                <div class="plo1_text">
+                <figure class="top_img"><img src="img/top-img.png" alt="トップ画像"/></figure>
+              <div class="pro1_text">
                     <div class="h2">
                         <h2>profile</h2>
                     </div>
                     <h4>吉田　愛梨 </h4>
                     <p>1997年生まれ横須賀出身
                         2024年5月　ICAテラハウス（職業訓練）WEBエキスパートコース入校。
-                        犬とペンギンが好き。特技は歌うことで、趣味は散歩犬を見ること・映画やアニメ鑑賞・ボードゲームなど。</p>
+                        犬とペンギンが好き。特技は歌うことで、趣味は散歩犬を見ること・映画やアニメ鑑賞・ボードゲームなど。</p><br>
+				<p>		自宅:Mac mini(イラスト作成ではipadも使用)
+						  / <span>訓練校:Windows 11</span></p>
                 </div>
             </div>
             <div class="h2">
@@ -49,8 +51,8 @@
             <div class="profile2">
                 <div>
                     <h4>デザイン</h4>
-                    <figure><img src="img/design.svg" class="animation" alt=""/></figure>
-                    <p>WEBデザイン/バナー/サムネイル/ロゴ等を作成できます。</p>
+                    <figure><img src="img/design.svg" class="animation" alt="デザイン"/></figure>
+                    <p>WEBデザイン/バナー/アイキャッチ/ロゴ等を作成できます。</p>
                     <dl class ="tools">
                         <dt>使用するツール</dt>
                         <dd>Photoshop</dd>
@@ -60,19 +62,27 @@
                 </div>
                 <div>
                     <h4>コーディング</h4>
-                    <figure><img src="img/code.svg" class="animation" alt=""/></figure>
-                    <p>HTML/CSSを用いてWEBページ制作が出来ます。JavaScript(jQuery)で簡単な動きをつけることも可能です。コーディングにはDream Weaverを使用しています。</p>
+                    <figure><img src="img/code.svg" class="animation" alt="コーディング"/></figure>
+                    <p>HTML/CSSを用いてWEBページ制作が出来ます。JavaScript(jQuery)で簡単な動きをつけることも可能です。</p>
+					<dl class ="tools">
+					<dt>使用するツール</dt>
+						<dd>Dreamweaver</dd>
+						
+					</dl>
                 </div>
                 <div>
-                    <h4>イラスト</h4>
-                    <figure id="illust"><img src="img/illust.svg" class="animation" alt=""/></figure>
-                    <p>簡単なイラスト制作が可能です。</p>
-                    <dl class ="tools">
-                        <dt>使用するツール</dt>
-                        <dd>Procreate</dd>
-                        <dd>Illustrator</dd>
-                    </dl>
-                </div>
+		<!-----------------------------9/08------------------------------------------->
+              <h4>イラスト・動画編集</h4>
+				  <figure id="illust"><img src="img/illust.svg" class="animation" alt="イラスト"/></figure>
+              <p>デザインに合わせた、簡単なイラスト制作が可能です。動画編集では、カットや字幕・サムネイル作成など基本的な編集を行うことができます。</p>
+				<dl class ="tools">
+					<dt>使用するツール</dt>
+						<dd>Pro create</dd>
+						<dd>Illustrator</dd>
+						<dd>Premiere Pro</dd>
+					</dl>
+		 <!-----------------------------9/08------------------------------------------->
+			 </div>
             </div>
         </section>
         <section class="sec_port" id="sec_port">
@@ -81,25 +91,27 @@
             </div>
             <h3>Webページ制作</h3>
             <ul class="list_webdesign">
-                <li class="inview"><a href="portfoliopage.html#leafcoffee"><img src="img/thumbnail/leafcoffee.png"　alt=""/></a> </li>
-                <li class="inview"><a href="portfoliopage.html#penguin"><img src="img/thumbnail/penguin.png"　alt=""/></a> </li>
-                <li class="inview"><a href="portfoliopage.html#pickles"><img src="img/thumbnail/pickles.png"　alt=""/></a> </li>
+				 <li class="inview"><a href="portfoliopage.html#english-school"><img src="img/thumbnail/english-school.png"　alt="英会話教室"/></a> </li>
+                <li class="inview"><a href="portfoliopage.html#leafcoffee"><img src="img/thumbnail/leafcoffee.png"　alt="リーフコーヒー"/></a> </li>
+                <li class="inview"><a href="portfoliopage.html#penguin"><img src="img/thumbnail/penguin.png"　alt="ペンギンって、知ってる？"/></a> </li>
+                <li class="inview"><a href="portfoliopage.html#pickles"><img src="img/thumbnail/pickles.png"　alt="ピックルス"/></a> </li>
             </ul>
             <h3>バナー・アイキャッチ</h3>
             <ul class="list_banner">
-                <li class="inview"><a href="portfoliopage.html#hiyomori"><img src="img/thumbnail/hiyomori.jpg" width="700" height="500" alt=""/></a> </li>
-                <li class="inview"><a href="portfoliopage.html#bungu"><img src="img/thumbnail/bungu.jpg" width="350" height="250" alt=""/></a> </li>
-                <li class="inview"><a href="portfoliopage.html#gacha"><img src="img/thumbnail/gacha.jpg" width="350" height="250" alt=""/></a> </li>
-                <li class="inview"><a href="portfoliopage.html#jyunrei"><img src="img/thumbnail/jyunrei_top.jpg" width="350" height="250" alt=""/></a> </li>
-                <li class="inview"><a href="portfoliopage.html#summersale"><img src="img/thumbnail/summersale_top.jpg" width="350" height="250" alt=""/></a> </li>
-                <li class="inview"><a href="portfoliopage.html#donut"><img src="img/thumbnail/dount_top.jpg" width="350" height="250" alt=""/></a> </li>
-                <li class="inview"><a href="portfoliopage.html#animalcafe"><img src="img/thumbnail/animal_top.jpg" width="350" height="250" alt=""/></a> </li>
-                <li class="inview"><a href="portfoliopage.html#flower"><img src="img/thumbnail/hana_top.jpg" width="350" height="250" alt=""/></a> </li>
+                <li class="inview"><a href="portfoliopage.html#hiyomori"><img src="img/thumbnail/hiyomori.jpg" width="700" height="500" alt="ひよこの杜"/></a> </li>
+                <li class="inview"><a href="portfoliopage.html#bungu"><img src="img/thumbnail/bungu.jpg" width="350" height="250" alt="文具展"/></a> </li>
+                <li class="inview"><a href="portfoliopage.html#gacha"><img src="img/thumbnail/gacha.jpg" width="350" height="250" alt="ピックアップガチャ"/></a> </li>
+                <li class="inview"><a href="portfoliopage.html#jyunrei"><img src="img/thumbnail/jyunrei_top.jpg" width="350" height="250" alt="聖地巡礼企画"/></a> </li>
+                <li class="inview"><a href="portfoliopage.html#summersale"><img src="img/thumbnail/summersale_top.jpg" width="350" height="250" alt="サマーセール"/></a> </li>
+                <li class="inview"><a href="portfoliopage.html#donut"><img src="img/thumbnail/dount_top.jpg" width="350" height="250" alt="ドーナツ催事"/></a> </li>
+                <li class="inview"><a href="portfoliopage.html#animalcafe"><img src="img/thumbnail/animal_top.jpg" width="350" height="250" alt="アニマルカフェ"/></a> </li>
+                <li class="inview"><a href="portfoliopage.html#flower"><img src="img/thumbnail/hana_top.jpg" width="350" height="250" alt="お花の定期便"/></a> </li>
             </ul>
             <h3>その他の制作</h3>
             <ul class="list_other">
-                <li class="inview"><a href="portfoliopage.html#pictgram"><img src="img/thumbnail/pictgram.jpg" width="700" height="500" alt=""/></a></li>
-                <li class="inview"><a href="portfoliopage.html#kaidan"><img src="img/thumbnail/kaidan_top.jpg" width="350" height="250" alt=""/></a></li>
+				<li class="inview"><a href="portfoliopage.html#illustration-eng"><img src="img/thumbnail/illustration.jpg" width="700" height="500" alt="イラスト制作"/></a></li>
+                <li class="inview"><a href="portfoliopage.html#pictgram"><img src="img/thumbnail/pictgram.jpg" width="700" height="500" alt="ピクトグラム"/></a></li>
+                <li class="inview"><a href="portfoliopage.html#kaidan"><img src="img/thumbnail/kaidan_top.jpg" width="350" height="250" alt="イラスト化"/></a></li>
             </ul>
             <p class="view"><a href="portfoliopage.html">View more</a></p>
         </section>
