--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -18,7 +18,7 @@
     <header>
         <h1><a href="index.html">
             <div class="flex">
-                <figure><img src="img/logo_airi.png" width="131" height="136" alt=""/></figure>
+                <figure><img src="img/logo_airi.png" width="131" height="136" alt="logo"/></figure>
                 Airi Yoshida</div>
             </a></h1>
         <div class="nav-button"> <span></span> <span></span> <span></span> </div>
@@ -35,8 +35,25 @@
         <div class="h2">
             <h2>Webページ制作</h2>
         </div>
+		       <div class="box" id="english-school">
+            <p class="works_img"><img src="img/thumbnail/english-school.png" width="1080" height="756" alt="WEBデザイン・コーディング「英会話教室」"/></p>
+            <h3><span>自主制作</span> <span>WEBページ制作</span></h3>
+            <h4>「Yoshida English School」</h4>
+            <p><a href="https://airi-pear.github.io/english-school/index.html" target="_blank">完成したページへ</a></p>
+            <dl>
+                <dt>制作時期</dt>
+                <dd>2024.9.10</dd>
+                <dt>制作時間</dt>
+                <dd>650分</dd>
+                <dt>使用ツール</dt>
+                <dd>adobeXD/Dreamweaver（バナー　Photoshop・イラスト　Illustrator）</dd>
+                <dt>作品の説明</dt>
+                <dd>英会話教室ということで、落ち着いた印象の青・紺を基調に　真摯なイメージが出せるように作成しました。フリーの素材ではちょうどよいイラストが見当たらなかったため、新たに描いています。トップの画像は無料体験のページにリンクさせており、バナーとしての役割もしています。<br>
+					サイトの構成は学校のグループワークで実案件として制作したページをもとにしました。コンペに落ちてしまったため、ロゴやデザインを全て一新し、架空のサイトとして作り直しています。グループワークでは主にコーディングを担当し、空いた時間にはデザインの改良などにも取り組みました。</dd>
+            </dl>
+        </div>
         <div class="box" id="leafcoffee">
-            <p class="works_img"><img src="img/thumbnail/leafcoffee.png" width="1080" height="756" alt=""/></p>
+            <p class="works_img"><img src="img/thumbnail/leafcoffee.png" width="1080" height="756" alt="WEBデザイン・コーディング「リーフコーヒー」"/></p>
             <h3><span>自主制作</span> <span>WEBページ制作</span></h3>
             <h4>「leafcoffee」</h4>
             <p><a href="https://airi-pear.github.io/leafcoffee/leafcoffee.html" target="_blank">完成したページへ</a></p>
@@ -53,7 +70,7 @@
             </dl>
         </div>
         <div class="box" id="penguin">
-            <p class="works_img"><img src="img/thumbnail/penguin.png" width="1080" height="756" alt=""/></p>
+            <p class="works_img"><img src="img/thumbnail/penguin.png" width="1080" height="756" alt="WEBデザイン・コーディング「ペンギンって、知ってる？」"/></p>
             <h3><span>自主制作</span> <span>WEBページ制作</span></h3>
             <h4>「ペンギンのこと、知ってる？」</h4>
             <p><a href="https://airi-pear.github.io/penguin/penguin-index.html" target="_blank">完成したページへ</a></p>
@@ -70,7 +87,7 @@
         </div>
         
         <div class="box" id="pickles">
-            <p class="works_img"><a href="pickles/pickles1.jpg"><img src="img/thumbnail/pickles.png" width="1080" height="756" alt=""/></a></p>
+            <p class="works_img"><a href="pickles/pickles1.jpg"><img src="img/thumbnail/pickles.png" width="1080" height="756" alt="WEBデザイン「ピックルス」"/></a></p>
             <h3><span>自主制作</span> <span>WEBデザイン</span></h3>
             <h4>「Pickles」</h4>
             <dl>
@@ -90,7 +107,7 @@
             <h2>バナー/アイキャッチ画像</h2>
         </div>
         <div class="box" id="hiyomori">
-            <p class="works_img_x"><a href="img/hiyomori.jpg"><img src="img/hiyomori.jpg"  alt=""/></a></p>
+            <p class="works_img_x"><a href="img/hiyomori.jpg"><img src="img/hiyomori.jpg"  alt="アイキャッチ「ひよこの杜」"/></a></p>
             <h3><span>自主制作</span>　<span>アイキャッチ画像</span></h3>
             <h4>ひよこの杜　リニューアルオープン</h4>
             <dl>
@@ -107,7 +124,7 @@
             <p class="thanks">※友人のお店のリニューアル記念で作成したものを、許可を得て掲載しています。 <a href="https://hiyo-mori.com/" target="_blank">https://hiyo-mori.com/</a></p>
         </div>
         <div class="box" id="bungu">
-            <p class="works_img_x"><a href="img/bungu-100.jpg"><img src="img/bungu-100.jpg"  alt=""/></a></p>
+            <p class="works_img_x"><a href="img/bungu-100.jpg"><img src="img/bungu-100.jpg"  alt="バナー「文房具展」"/></a></p>
             <h3><span>自主制作</span> <span>バナー</span></h3>
             <h4>文房具販売催事</h4>
             <dl>
@@ -123,7 +140,7 @@
             <p class="thanks">※背景　原稿用紙素材をお借りしました。 <a href="https://free-paper-texture.com/" target="_blank">https://free-paper-texture.com/</a></p>
         </div>
         <div class="box" id="gacha">
-            <p class="works_img_x"><a href="img/gacha.jpg"><img src="img/gacha.jpg" width="1025" height="600" alt=""/></a></p>
+            <p class="works_img_x"><a href="img/gacha.jpg"><img src="img/gacha.jpg" width="1025" height="600" alt="バナー「ピックアップガチャ」"/></a></p>
             <h3><span>自主制作</span> <span>バナー</span></h3>
             <h4>ピックアップガチャ</h4>
             <dl>
@@ -139,7 +156,7 @@
             <p class="thanks">※イラストをお借りしました。<a href="https://tachie.trpg-start.com/" target="_blank">https://tachie.trpg-start.com/</a></p>
         </div>
         <div class="box" id="jyunrei">
-            <p class="works_img_y"><a href="img/jyunrei.jpg"><img src="img/jyunrei.jpg" width="750" height="1000" alt=""/></a></p>
+            <p class="works_img_y"><a href="img/jyunrei.jpg"><img src="img/jyunrei.jpg" width="750" height="1000" alt="バナー「聖地巡礼特集」"/></a></p>
             <h3><span>自主制作</span> <span>サイト内誘導バナー</span></h3>
             <h4>聖地巡礼特集</h4>
             <dl>
@@ -154,7 +171,7 @@
             </dl>
         </div>
         <div class="box" id="summersale">
-            <p class="works_img_x"><a href="img/summersale_banner.jpg" title="SummerSale"><img src="img/summersale_banner.jpg" width="1000" height="500" alt=""/></a></p>
+            <p class="works_img_x"><a href="img/summersale_banner.jpg" title="SummerSale"><img src="img/summersale_banner.jpg" width="1000" height="500" alt="バナー「サマーセール」"/></a></p>
             <h3><span>自主制作</span> <span>バナー</span></h3>
             <h4>サマーセール広告</h4>
             <dl>
@@ -169,7 +186,7 @@
             </dl>
         </div>
         <div class="box" id="animalcafe">
-            <p class="works_img"><a href="img/animalcafe.jpg" title="Animal Cafe"><img src="img/animalcafe.jpg" width="780" height="780" alt=""/></a></p>
+            <p class="works_img"><a href="img/animalcafe.jpg" title="Animal Cafe"><img src="img/animalcafe.jpg" width="780" height="780" alt="アイキャッチ「アニマルカフェ」"/></a></p>
             <h3><span>自主制作</span> <span>アイキャッチ</span></h3>
             <h4>動物カフェ</h4>
             <dl>
@@ -184,7 +201,7 @@
             </dl>
         </div>
         <div class="box" id="donut">
-            <p class="works_img"><a href="img/donut_banner.jpg" title="ドーナツフェスタ"><img src="img/donut_banner.jpg" width="672" height="560" alt=""/></a></p>
+            <p class="works_img"><a href="img/donut_banner.jpg" title="ドーナツフェスタ"><img src="img/donut_banner.jpg" width="672" height="560" alt="バナー「ドーナツフェスタ」"/></a></p>
             <h3><span>自主制作</span> <span>バナー</span></h3>
             <h4>ドーナツフェスタ</h4>
             <dl>
@@ -199,7 +216,7 @@
             </dl>
         </div>
         <div class="box" id="flower">
-            <p class="works_img"><a href="img/hana_top.jpg" title="花の定期便"><img src="img/hana_top.jpg" width="672" height="560" alt=""/></a></p>
+            <p class="works_img"><a href="img/hana_top.jpg" title="花の定期便"><img src="img/hana_top.jpg" width="672" height="560" alt="バナー「花の定期便」"/></a></p>
             <h3><span>自主制作</span> <span>バナー</span></h3>
             <h4>花の定期便</h4>
             <dl>
@@ -217,7 +234,7 @@
             <h2>その他</h2>
         </div>
         <div class="box" id="pictgram">
-            <p class="works_img_x"><a href="img/pictgram_sise.jpg"　title="イラスト風加工"><img src="img/pictgram_sise.jpg" width="964" height="513" alt=""/></a></p>
+            <p class="works_img_x"><a href="img/pictgram_sise.jpg"　title="ピクトグラム"><img src="img/pictgram_sise.jpg" width="964" height="513" alt="ピクトグラム"/></a></p>
             <h3><span>自主制作</span> <span>ピクトグラム</span></h3>
             <dl>
                 <dt>制作時期</dt>
@@ -231,7 +248,7 @@
             </dl>
         </div>
         <div class="box" id="kaidan">
-            <p class="works_img_x"><a href="img/kaidan.jpg"　title="イラスト風加工"><img src="img/kaidan.jpg" width="1280" height="720" alt=""/></a></p>
+            <p class="works_img_x"><a href="img/kaidan.jpg"　title="イラスト風加工"><img src="img/kaidan.jpg" width="1280" height="720" alt="イラスト風加工"/></a></p>
             <h3><span>自主制作</span> <span>写真加工</span></h3>
             <dl>
                 <dt>制作時期</dt>
@@ -241,9 +258,24 @@
                 <dt>使用ツール</dt>
                 <dd>Photoshop</dd>
                 <dt>作品の説明</dt>
-                <dd>イラストらしくなるように明るさや彩度を調整・輪郭線を追加し、空を差し替えました。</dd>
+                <dd>イラストらしくなるように明るさや彩度を調整・輪郭線を追加し、空を差し替えました。人物イラストの背景として使用することをイメージして作成しています。</dd>
             </dl>
-            <p class="beforelink"><a href="img/2020-05-24_14-28-31_459.jpeg">元の写真はこちら</a></p>
+            <p class="beforelink"><a href="img/2020-05-24_14-28-31_459.jpeg" alt="加工前">元の写真はこちら</a></p>
+        </div>
+		   <div class="box" id="illustration-eng">
+            <p class="works_img_x"><a href="img/thumbnail/illustration.jpg"　title="イラスト風加工"><img src="img/thumbnail/illustration.jpg" width="700" height="500" alt="イラスト風加工"/></a></p>
+            <h3><span>自主制作</span> <span>イラスト制作</span></h3>
+            <dl>
+                <dt>制作時期</dt>
+                <dd>2024.9.9</dd>
+                <dt>制作時間</dt>
+                <dd>120分</dd>
+                <dt>使用ツール</dt>
+                <dd>Illustrator</dd>
+                <dt>作品の説明</dt>
+                <dd>架空のWEBページ内、各年代ごとのコース説明の挿絵として制作しました。人物だけだとさみしい感じがしたので、ページのアクセントカラーである黄色を流体シェイプで後ろに配置しました。普段はipadで大まかな線を書いてからIllustratorに取り込むのですが、このイラストはPC版Illustratorのみで作成してみました。</dd>
+            </dl>
+            <p class="beforelink"><a href="img/2020-05-24_14-28-31_459.jpeg" alt="加工前">元の写真はこちら</a></p>
         </div>
     </main>
     <p><a href="#sub" class="pagetop" id="pagetop">TOP</a></p>
@@ -289,6 +321,7 @@
      //menu開閉
    $(function(){
      $(".nav-button").on("click",function(){
+
        $("body").toggleClass("nav-open");
      });
      $(document).on("click",".nav-open nav a",function(){
