詰まりすぎ解消

--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -48,8 +48,8 @@
                 <dt>使用ツール</dt>
                 <dd>adobeXD/Dreamweaver（バナー　Photoshop・イラスト　Illustrator）</dd>
                 <dt>作品の説明</dt>
-                <dd>英会話教室ということで、落ち着いた印象の青・紺を基調に　真摯なイメージが出せるように作成しました。フリーの素材ではちょうどよいイラストが見当たらなかったため、新たに描いています。トップの画像は無料体験のページにリンクさせており、バナーとしての役割もしています。<br>
-					サイトの構成は学校のグループワークで実案件として制作したページをもとにしました。コンペに落ちてしまったため、ロゴやデザインを全て一新し、架空のサイトとして作り直しています。グループワークでは主にコーディングを担当し、空いた時間にはデザインの改良などにも取り組みました。</dd>
+                <dd>英会話教室ということで、落ち着いた印象の青・紺を基調に　真摯なイメージが出せるように作成しました。フリーの素材ではちょうどよいイラストが見当たらなかったため、新たに描いています。<br>トップの画像は無料体験のページにリンクさせており、バナーとしての役割もしています。<br>
+					サイトの構成は学校のグループワークで実案件として制作したページをもとにしました。<br>コンペに落ちてしまったため、ロゴやデザインを全て一新し、架空のサイトとして作り直しています。グループワークでは主にコーディングを担当し、空いた時間にはデザインの改良などにも取り組みました。</dd>
             </dl>
         </div>
         <div class="box" id="leafcoffee">
