動画の追加

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         犬とペンギンが好き。特技は歌うことで、趣味は散歩犬を見ること・映画やアニメ鑑賞・ボードゲームなど。</p><br>
 				<p>		自宅:Mac mini(イラスト作成ではipadも使用)
 						  / <span>訓練校:Windows 11</span></p>
-                </div>
+              </div>
             </div>
             <div class="h2">
                 <h2 id="ican">出来ること</h2>
@@ -71,6 +71,7 @@
 					</dl>
                 </div>
                 <div>
+					
 		<!-----------------------------9/08------------------------------------------->
               <h4>イラスト・動画編集</h4>
 				  <figure id="illust"><img src="img/illust.svg" class="animation" alt="イラスト"/></figure>
@@ -80,11 +81,12 @@
 						<dd>Pro create</dd>
 						<dd>Illustrator</dd>
 						<dd>Premiere Pro</dd>
-					</dl>
+				  </dl>
 		 <!-----------------------------9/08------------------------------------------->
 			 </div>
             </div>
         </section>
+		<div class="video"><p>PremiereProで作成した自己紹介動画</p><iframe width="560" height="315" src="https://www.youtube.com/embed/XrR0hg0Hw6g?si=yJQHCULTiSiB_ro5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
         <section class="sec_port" id="sec_port">
             <div class="h2">
                 <h2>portfolio</h2>
