--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 			 </div>
             </div>
         </section>
-		<div class="video"><p>PremiereProで作成した自己紹介動画</p><iframe width="560" height="315" src="https://www.youtube.com/embed/XrR0hg0Hw6g?si=yJQHCULTiSiB_ro5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+		<div class="video"><p>自己紹介動画（サウンド無し）</p><iframe width="560" height="315" src="https://www.youtube.com/embed/XrR0hg0Hw6g?si=yJQHCULTiSiB_ro5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
         <section class="sec_port" id="sec_port">
             <div class="h2">
                 <h2>portfolio</h2>
