--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -48,8 +48,8 @@
                 <dt>使用ツール</dt>
                 <dd>adobeXD/Dreamweaver（バナー　Photoshop・イラスト　Illustrator）</dd>
                 <dt>作品の説明</dt>
-                <dd>英会話教室ということで、落ち着いた印象の青・紺を基調に　真摯なイメージが出せるように作成しました。フリーの素材ではちょうどよいイラストが見当たらなかったため、新たに描いています。<br>トップの画像は無料体験のページにリンクさせており、バナーとしての役割もしています。<br>
-					サイトの構成は学校のグループワークで実案件として制作したページをもとにしました。<br>コンペに落ちてしまったため、ロゴやデザインを全て一新し、架空のサイトとして作り直しています。グループワークでは主にコーディングを担当し、空いた時間にはデザインの改良などにも取り組みました。</dd>
+                <dd>英会話教室ということで、落ち着いた印象の青・紺を基調に　真摯なイメージが出せるように作成しました。フリーの素材ではちょうどよいイラストが見当たらなかったため、新たに描いています。トップの画像は無料体験のページにリンクさせており、バナーとしての役割もしています。<br>
+					サイトの構成は学校のグループワークで実案件として制作したページをもとにしました。コンペに落ちてしまったため、ロゴやデザインを全て一新し、架空のサイトとして作り直しています。グループワークでは主にコーディングを担当し、空いた時間にはデザインの改良などにも取り組みました。</dd>
             </dl>
         </div>
         <div class="box" id="leafcoffee">
@@ -233,6 +233,21 @@
         <div class="h2">
             <h2>その他</h2>
         </div>
+			   <div class="box" id="illustration-eng">
+            <p class="works_img_x"><a href="img/thumbnail/illustration.jpg"　title="イラスト風加工"><img src="img/thumbnail/illustration.jpg" width="700" height="500" alt="イラスト風加工"/></a></p>
+            <h3><span>自主制作</span> <span>イラスト制作</span></h3>
+            <dl>
+                <dt>制作時期</dt>
+                <dd>2024.9.9</dd>
+                <dt>制作時間</dt>
+                <dd>120分</dd>
+                <dt>使用ツール</dt>
+                <dd>Illustrator</dd>
+                <dt>作品の説明</dt>
+                <dd>架空のWEBページ内、各年代ごとのコース説明の挿絵として制作しました。人物だけだとさみしい感じがしたので、ページのアクセントカラーである黄色を流体シェイプで後ろに配置しました。普段はipadで大まかな線を書いてからIllustratorに取り込むのですが、このイラストはPC版Illustratorのみで作成してみました。</dd>
+            </dl>
+           
+        </div>
         <div class="box" id="pictgram">
             <p class="works_img_x"><a href="img/pictgram_sise.jpg"　title="ピクトグラム"><img src="img/pictgram_sise.jpg" width="964" height="513" alt="ピクトグラム"/></a></p>
             <h3><span>自主制作</span> <span>ピクトグラム</span></h3>
@@ -247,6 +262,7 @@
                 <dd>Illustratorを使用して初めて作成した作品です。どなたが見てもわかりやすく情報を伝えるという目的を損なわないよう注意しました。</dd>
             </dl>
         </div>
+		
         <div class="box" id="kaidan">
             <p class="works_img_x"><a href="img/kaidan.jpg"　title="イラスト風加工"><img src="img/kaidan.jpg" width="1280" height="720" alt="イラスト風加工"/></a></p>
             <h3><span>自主制作</span> <span>写真加工</span></h3>
@@ -262,21 +278,7 @@
             </dl>
             <p class="beforelink"><a href="img/2020-05-24_14-28-31_459.jpeg" alt="加工前">元の写真はこちら</a></p>
         </div>
-		   <div class="box" id="illustration-eng">
-            <p class="works_img_x"><a href="img/thumbnail/illustration.jpg"　title="イラスト風加工"><img src="img/thumbnail/illustration.jpg" width="700" height="500" alt="イラスト風加工"/></a></p>
-            <h3><span>自主制作</span> <span>イラスト制作</span></h3>
-            <dl>
-                <dt>制作時期</dt>
-                <dd>2024.9.9</dd>
-                <dt>制作時間</dt>
-                <dd>120分</dd>
-                <dt>使用ツール</dt>
-                <dd>Illustrator</dd>
-                <dt>作品の説明</dt>
-                <dd>架空のWEBページ内、各年代ごとのコース説明の挿絵として制作しました。人物だけだとさみしい感じがしたので、ページのアクセントカラーである黄色を流体シェイプで後ろに配置しました。普段はipadで大まかな線を書いてからIllustratorに取り込むのですが、このイラストはPC版Illustratorのみで作成してみました。</dd>
-            </dl>
-            <p class="beforelink"><a href="img/2020-05-24_14-28-31_459.jpeg" alt="加工前">元の写真はこちら</a></p>
-        </div>
+	
     </main>
     <p><a href="#sub" class="pagetop" id="pagetop">TOP</a></p>
     <ul class="circles">
