--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -35,6 +35,23 @@
         <div class="h2">
             <h2>Webページ制作</h2>
         </div>
+	            <div class="box" id="pickles">
+            <p class="works_img"><img src="img/thumbnail/pickles.png" width="1080" height="756" alt="WEBデザイン「ピックルス」"/></p>
+            <h3><span>自主制作</span> <span>WEBデザイン</span></h3>
+            <h4>「Pickles」</h4>
+		
+		<p><a href="https://airi-pear.github.io/pickles/index.html" target="_blank">完成したページへ</a></p>
+            <dl>
+                <dt>制作時期</dt>
+                <dd>2024.9.18</dd>
+                <dt>制作時間</dt>
+                <dd>280分</dd>
+                <dt>使用ツール</dt>
+                <dd>Photoshop/Dream weaver</dd>
+                <dt>作品の説明</dt>
+                <dd>ピクルスのカラフルなイメージをデザインに活かし、にんじんの赤やきゅうりの緑などを使いました。出来るだけシンプルに・けれどポップさは残るように仕上げました。</dd>
+            </dl>
+        </div>
 		       <div class="box" id="english-school">
             <p class="works_img"><img src="img/thumbnail/english-school.png" width="1080" height="756" alt="WEBデザイン・コーディング「英会話教室」"/></p>
             <h3><span>自主制作</span> <span>WEBページ制作</span></h3>
@@ -86,21 +103,7 @@
             </dl>
         </div>
         
-        <div class="box" id="pickles">
-            <p class="works_img"><a href="pickles/pickles1.jpg"><img src="img/thumbnail/pickles.png" width="1080" height="756" alt="WEBデザイン「ピックルス」"/></a></p>
-            <h3><span>自主制作</span> <span>WEBデザイン</span></h3>
-            <h4>「Pickles」</h4>
-            <dl>
-                <dt>制作時期</dt>
-                <dd>2024.5</dd>
-                <dt>制作時間</dt>
-                <dd>180分</dd>
-                <dt>使用ツール</dt>
-                <dd>Photoshop</dd>
-                <dt>作品の説明</dt>
-                <dd>ピクルスのカラフルなイメージをデザインに活かし、にんじんの赤やきゅうりの緑などを使って、かわいらしくポップに仕上げました。曲線を多用し、親しみやすさを強調しています。見ていて楽しいページを目指して作成しました。</dd>
-            </dl>
-        </div>
+
           <p class="aisatsu"><span>ポートフォリオをご覧いただき</span><span>ありがとうございます。</span><br>
             <span>サムネイルをクリックしますと</span><span>拡大してご覧いただけます。</span></p>
         <div class="h2">
