--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -49,7 +49,9 @@
                 <dt>使用ツール</dt>
                 <dd>Photoshop/Dream weaver</dd>
                 <dt>作品の説明</dt>
-                <dd>ピクルスのカラフルなイメージをデザインに活かし、にんじんの赤やきゅうりの緑などを使いました。出来るだけシンプルに・けれどポップさは残るように仕上げました。</dd>
+                <dd>ピクルスのカラフルなイメージをデザインに活かし、にんじんの赤やきゅうりの緑などを使いました。出来るだけシンプルに・けれどポップさは残るように仕上げました。<br>トップの野菜の写真がすごく印象に残る良い写真だったので、大きく使いたいと思い　PCでもスマホでも大胆に表示させています。
+			
+		</dd>
             </dl>
         </div>
 		       <div class="box" id="english-school">
