ふぁびこん

--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -9,6 +9,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Murecho:wght@100..900&family=Zen+Maru+Gothic&display=swap" rel="stylesheet">
 <title>portfolio|詳細ページ</title>
+		<link rel="icon" href="favicon.ico">
+	<link rel="apple-touch-icon" href="icon.png">
 <link href="style.css" rel="stylesheet" type="text/css">
 <link href="css/magnific-popup.css" rel="stylesheet" type="text/css">
 </head>
@@ -40,7 +42,7 @@
             <h3><span>自主制作</span> <span>WEBデザイン</span></h3>
             <h4>「Pickles」</h4>
 		
-		<p><a href="https://airi-pear.github.io/pickles/index.html" target="_blank">完成したページへ</a></p>
+		<p class="to-site"><a href="https://airi-pear.github.io/pickles/index.html" target="_blank">完成したページへ</a></p>
             <dl>
                 <dt>制作時期</dt>
                 <dd>2024.9.18</dd>
@@ -58,7 +60,7 @@
             <p class="works_img"><img src="img/thumbnail/english-school.png" width="1080" height="756" alt="WEBデザイン・コーディング「英会話教室」"/></p>
             <h3><span>自主制作</span> <span>WEBページ制作</span></h3>
             <h4>「Yoshida English School」</h4>
-            <p><a href="https://airi-pear.github.io/english-school/index.html" target="_blank">完成したページへ</a></p>
+            <p class="to-site"><a href="https://airi-pear.github.io/english-school/index.html" target="_blank">完成したページへ</a></p>
             <dl>
                 <dt>制作時期</dt>
                 <dd>2024.9.10</dd>
@@ -75,7 +77,7 @@
             <p class="works_img"><img src="img/thumbnail/leafcoffee.png" width="1080" height="756" alt="WEBデザイン・コーディング「リーフコーヒー」"/></p>
             <h3><span>自主制作</span> <span>WEBページ制作</span></h3>
             <h4>「leafcoffee」</h4>
-            <p><a href="https://airi-pear.github.io/leafcoffee/leafcoffee.html" target="_blank">完成したページへ</a></p>
+            <p class="to-site"><a href="https://airi-pear.github.io/leafcoffee/leafcoffee.html" target="_blank">完成したページへ</a></p>
             <p>トップページのみの制作です。</p>
             <dl>
                 <dt>制作時期</dt>
@@ -92,9 +94,9 @@
             <p class="works_img"><img src="img/thumbnail/penguin.png" width="1080" height="756" alt="WEBデザイン・コーディング「ペンギンって、知ってる？」"/></p>
             <h3><span>自主制作</span> <span>WEBページ制作</span></h3>
             <h4>「ペンギンのこと、知ってる？」</h4>
-            <p><a href="https://airi-pear.github.io/penguin/penguin-index.html" target="_blank">完成したページへ</a></p>
+            <p class="to-site"><a href="https://airi-pear.github.io/penguin/penguin-index.html" target="_blank">完成したページへ</a></p>
             <dl>
-                <dt>制作時期</dt>
+              <dt>制作時期</dt>
                 <dd>2024.8.10</dd>
                 <dt>制作時間</dt>
                 <dd>500分</dd>
