--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Murecho:wght@100..900&family=Zen+Maru+Gothic&display=swap" rel="stylesheet">
 <title>mypage|Airi yoshida</title>
+	<link rel="icon" href="favicon.ico">
+	<link rel="apple-touch-icon" href="icon.png">
 <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
