--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -160,7 +160,7 @@
                 <dt>作品の説明</dt>
                 <dd>背景は学校の教室の写真をイラスト風に加工し、アクアブルーを重ねました。キラキラと光を散らし、豪華な印象を演出しています。全体的に制服をイメージしたネイビーを多用していますが、青でまとめすぎるとさみしくなってしまったのでオレンジも使って明るさを足しました。ロゴやキャンペーン内容の部分はぷっくりと立体感を出し、文字はグラデーションや境界線で装飾しています。</dd>
             </dl>
-            <p class="thanks">※人物イラストをお借りしました。<a href="https://tachie.trpg-start.com/" target="_blank">https://tachie.trpg-start.com/</a></p>
+            <p class="thanks">※イラストをお借りしました。<a href="https://tachie.trpg-start.com/" target="_blank">https://tachie.trpg-start.com/</a></p>
         </div>
         <div class="box" id="jyunrei">
             <p class="works_img_y"><a href="img/jyunrei.jpg"><img src="img/jyunrei.jpg" width="750" height="1000" alt="バナー「聖地巡礼特集」"/></a></p>
@@ -192,7 +192,21 @@
                 <dd>OFF率が一目でわかるよう配置しました。爽やかで夏らしい色使いを心掛け、オンラインストア限定のセールということでボタンのようなあしらいをしました。</dd>
             </dl>
         </div>
-
+        <div class="box" id="animalcafe">
+            <p class="works_img"><a href="img/animalcafe.jpg" title="Animal Cafe"><img src="img/animalcafe.jpg" width="780" height="780" alt="アイキャッチ「アニマルカフェ」"/></a></p>
+            <h3><span>自主制作</span> <span>アイキャッチ</span></h3>
+            <h4>動物カフェ</h4>
+            <dl>
+                <dt>制作時期</dt>
+                <dd>2024.7.20</dd>
+                <dt>制作時間</dt>
+                <dd>150分</dd>
+                <dt>使用ツール</dt>
+                <dd>Photoshop</dd>
+                <dt>作品の説明</dt>
+                <dd>こんな写真をここで撮りたい！と思ってもらえるよう、カフェで撮影した可愛らしい写真を複数使用しました。柔らかなピンク・黄色をメインに　丸みのあるフォントや縁取りで全体的にキュートなイメージに仕上げました。</dd>
+            </dl>
+        </div>
         <div class="box" id="donut">
             <p class="works_img"><a href="img/donut_banner.jpg" title="ドーナツフェスタ"><img src="img/donut_banner.jpg" width="672" height="560" alt="バナー「ドーナツフェスタ」"/></a></p>
             <h3><span>自主制作</span> <span>バナー</span></h3>
