--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -113,6 +113,21 @@
         <div class="h2">
             <h2>バナー/アイキャッチ画像</h2>
         </div>
+           <div class="box" id="sandwich">
+            <p class="works_img"><a href="img/sandwich.jpg"><img src="img/sandwich.jpg"  alt="バナー「サンドイッチ専門店」"/></a></p>
+            <h3><span>自主制作</span>　<span>バナー</span></h3>
+            <h4>サンドイッチ専門店　オープン</h4>
+            <dl>
+                <dt>制作時期</dt>
+                <dd>2024.9.20</dd>
+                <dt>制作時間</dt>
+                <dd>40分</dd>
+                <dt>使用ツール</dt>
+                <dd>Photoshop</dd>
+                <dt>作品の説明</dt>
+                <dd>シンプルで洗練された印象になるよう、色数はなるべく減らしました。必要な情報のみを記載し、余白を多くとることで視認性を高め、すっきりとした印象にしています。</dd>
+            </dl>
+        </div>
         <div class="box" id="hiyomori">
             <p class="works_img_x"><a href="img/hiyomori.jpg"><img src="img/hiyomori.jpg"  alt="アイキャッチ「ひよこの杜」"/></a></p>
             <h3><span>自主制作</span>　<span>アイキャッチ画像</span></h3>
