--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -37,6 +37,26 @@
         <div class="h2">
             <h2>Webページ制作</h2>
         </div>
+	    <div class="box" id="new-penguin">
+            <p class="works_img"><img src="img/thumbnail/new-penguin.png" width="1080" height="756" alt="WEBデザイン「新・ペンギンって知ってる？」"/></p>
+            <h3><span>自主制作</span> <span>WEBデザイン</span></h3>
+            <h4>「新・ペンギンって知ってる？」</h4>
+		
+		<p class="to-site"><a href="https://airi-pear.github.io/penguin/new-penguin-index.html" target="_blank">完成したページへ</a></p>
+            <dl>
+                <dt>制作時期</dt>
+                <dd>2024.9.26</dd>
+                <dt>制作時間</dt>
+                <dd>7時間</dd>
+                <dt>使用ツール</dt>
+                <dd>Photoshop/Dream weaver</dd>
+                <dt>作品の説明</dt>
+                <dd>以前制作したページのリニューアルをしました。前回は動きをつけたりポップな色使いでかわいらしいページでしたが、今回は見やすさを重視。<br>スマホ表示で長くなってしまっていた
+			ところを、スマホ・タブレットではアコーディオンで表示させるなど工夫をしました。見出しは縦書きで、飽きないレイアウトを心掛けました。
+			
+		</dd>
+            </dl>
+        </div>
 	            <div class="box" id="pickles">
             <p class="works_img"><img src="img/thumbnail/pickles.png" width="1080" height="756" alt="WEBデザイン「ピックルス」"/></p>
             <h3><span>自主制作</span> <span>WEBデザイン</span></h3>
