--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
             </div>
             <h3>Webページ制作</h3>
             <ul class="list_webdesign">
+		     <li class="inview"><a href="portfoliopage.html#new-penguin"><img src="img/thumbnail/new-penguin.png"　alt="新・ペンギンって知ってる？"/></a> </li>
 		    <li class="inview"><a href="portfoliopage.html#pickles"><img src="img/thumbnail/pickles.png"　alt="ピックルス"/></a> </li>
 				 <li class="inview"><a href="portfoliopage.html#english-school"><img src="img/thumbnail/english-school.png"　alt="英会話教室"/></a> </li>
                 <li class="inview"><a href="portfoliopage.html#leafcoffee"><img src="img/thumbnail/leafcoffee.png"　alt="リーフコーヒー"/></a> </li>
