--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -37,6 +37,25 @@
         <div class="h2">
             <h2>Webページ制作</h2>
         </div>
+	    <div class="box" id="y-diary">
+            <p class="works_img"><img src="img/thumbnail/y-diary.png" width="1080" height="756" alt="WEBデザイン「よしだの生活日記」"/></p>
+            <h3><span>自主制作</span> <span>WEBデザイン</span></h3>
+            <h4>「よしだの生活日記」</h4>
+		
+		<p class="to-site"><a href="https://airi-pear.github.io/y-diary/index.html" target="_blank">完成したページへ</a></p>
+            <dl>
+                <dt>制作時期</dt>
+                <dd>2024.9.27</dd>
+                <dt>制作時間</dt>
+                <dd>5時間</dd>
+                <dt>使用ツール</dt>
+                <dd>Dream weaver</dd>
+                <dt>作品の説明</dt>
+                <dd>勉強や日常の記録をしておけるサイトが欲しいな、と自分用に制作したサイトです。読んでもらった人に自分の雰囲気が伝わってくれたらいいなと思い、飾りすぎていない
+		デザインにしようと意識しました。<br><a href="https://airi-pear.github.io/y-diary/subpage/20240927.html">このページ</a>はGIFを入れてみたりと、長くても飽きないページになるよう工夫しています。
+		</dd>
+            </dl>
+        </div>
 	    <div class="box" id="new-penguin">
             <p class="works_img"><img src="img/thumbnail/new-penguin.png" width="1080" height="756" alt="WEBデザイン「新・ペンギンって知ってる？」"/></p>
             <h3><span>自主制作</span> <span>WEBデザイン</span></h3>
