古いペンギン消した

--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -70,8 +70,7 @@
                 <dt>使用ツール</dt>
                 <dd>Photoshop/Dream weaver</dd>
                 <dt>作品の説明</dt>
-                <dd>以前制作したページのリニューアルをしました。前回は動きをつけたりポップな色使いでかわいらしいページでしたが、今回は見やすさを重視。<br>スマホ表示で長くなってしまっていた
-			ところを、スマホ・タブレットではアコーディオンで表示させるなど工夫をしました。見出しは縦書きで、飽きないレイアウトを心掛けました。
+                <dd>以前制作したページのリニューアルをしました。見やすさを重視し、スマホ表示の際に長くなってしまっていたところを、スマホ・タブレットではアコーディオンで表示させるなど工夫をしました。見出しは縦書きで、一風変わったレイアウトを心掛けました。
 			
 		</dd>
             </dl>
@@ -129,22 +128,7 @@
                 <dd>気軽に、どんな方でも緊張せずにくつろげる空間であることをアピールするために、丸みのあるフォントや自然な色合いを使用しています。余白は多めにとり、リラックス感を演出しました。</dd>
             </dl>
         </div>
-        <div class="box" id="penguin">
-            <p class="works_img"><img src="img/thumbnail/penguin.png" width="1080" height="756" alt="WEBデザイン・コーディング「ペンギンって、知ってる？」"/></p>
-            <h3><span>自主制作</span> <span>WEBページ制作</span></h3>
-            <h4>「ペンギンのこと、知ってる？」</h4>
-            <p class="to-site"><a href="https://airi-pear.github.io/penguin/penguin-index.html" target="_blank">完成したページへ</a></p>
-            <dl>
-              <dt>制作時期</dt>
-                <dd>2024.8.10</dd>
-                <dt>制作時間</dt>
-                <dd>500分</dd>
-                <dt>使用ツール</dt>
-                <dd>adobeXD/Dreamweaver</dd>
-                <dt>作品の説明</dt>
-                <dd>ペンギンのもつ完璧でない可愛らしさを表現したいと思い作成しました。小学生や中学生でも飽きずに楽しめるように動きをつけ、色合いは海をイメージさせる淡い青とポイントカラーに黄色を使用しています。</dd>
-            </dl>
-        </div>
+        
         
 
           <p class="aisatsu"><span>ポートフォリオをご覧いただき</span><span>ありがとうございます。</span><br>
